force-app/main/default/objects/CC_Grupo_Colaborador_Plantilla__c/CC_Grupo_Colaborador_Plantilla__c.object-meta.xml
<CustomObject>
    <label>Grupo Colaborador Plantilla</label>
    <nameField>
        <displayFormat>GCP-{0000}</displayFormat>
        <label>Grupo Colaborador Plantilla Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grupo Colaborador Plantillas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>