force-app/main/default/objects/CC_Grupo_Colaborador_Plantilla__c/fields/CC_Operativa__c.field-meta.xml
<CustomField>
    <fullName>CC_Operativa__c</fullName>
    <label>Operativa</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trasladar</fullName>
            </value>
            <value>
                <fullName>Remitir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>