force-app/main/default/objects/CC_Grupo_Colaborador_Plantilla__c/fields/CC_Plantilla_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Plantilla_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla</label>
    <type>TextArea</type>
</CustomField>