force-app/main/default/objects/CC_Grupo_Colaborador_Plantilla__c/fields/SEG_Plantilla__c.field-meta.xml
<CustomField>
    <fullName>SEG_Plantilla__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla</label>
    <referenceTo>SEG_Plantilla__c</referenceTo>
    <relationshipLabel>Grupo Colaborador Plantillas</relationshipLabel>
    <relationshipName>Grupo_Colaborador_Plantillas</relationshipName>
    <type>Lookup</type>
</CustomField>